Fix: Changed fixed height to min height so there's no vertical overflow

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ body {
 }
 
 main {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
